# Quant

./: CMakeLists.txt
OrderBook/: order_book.cpp
generateOrders/: generateOrders.cpp  generateOrders.hpp
limitOrderBook/: main.cpp
processOrders/: orderPipeline.cpp  orderPipeline.hpp
